Update del proceso de login y registro, reestructuración de las carpetas del angular

--- a/artist4all_angular/src/app/components/secure/edit-user/edit-user.component.html
+++ b/artist4all_angular/src/app/components/secure/edit-user/edit-user.component.html
@@ -54,7 +54,7 @@
                   Nombre:
                 </dt>
                 <dd class="mt-1 text-sm text-gray-900">
-                <input #inputName="ngModel" [(ngModel)]="nameForm" type="text" id="nameForm" name="nameForm" value="{{ name }}">
+                <input #inputName="ngModel" [(ngModel)]="name" type="text" id="name" name="name" value="{{ name }}">
                 <i class="fas fa-pen ml-5"></i>
                 </dd>
               </div>
@@ -64,7 +64,7 @@
                   Email:
                 </dt>
                 <dd class="mt-1 text-sm text-gray-900">
-                  <input #inputEmail="ngModel" [(ngModel)]="emailForm" type="text" id="emailForm" name="emailForm" value="{{ email }}">
+                  <input #inputEmail="ngModel" [(ngModel)]="email" type="text" id="email" name="email" value="{{ email }}">
                   <i class="fas fa-pen ml-5"></i>
                 </dd>
               </div>
@@ -74,7 +74,7 @@
                   1r Apellido:
                 </dt>
                 <dd class="mt-1 text-sm text-gray-900">
-                  <input #inputSurname1="ngModel" [(ngModel)]="surname1Form" type="text" id="surname1Form" name="surname1Form" value="{{ surname1 }}">
+                  <input #inputSurname1="ngModel" [(ngModel)]="surname1" type="text" id="surname1" name="surname1" value="{{ surname1 }}">
                   <i class="fas fa-pen ml-5"></i>
                 </dd>
               </div>
@@ -94,7 +94,7 @@
                   2º Apellido:
                 </dt>
                 <dd class="mt-1 text-sm text-gray-900">
-                  <input #inputSurname2="ngModel" [(ngModel)]="surname2Form" type="text" id="surname2Form" name="surname2Form" value="{{ surname2 }}">
+                  <input #inputSurname2="ngModel" [(ngModel)]="surname2" type="text" id="surname2" name="surname2" value="{{ surname2 }}">
                   <i class="fas fa-pen ml-5"></i>
                 </dd>
               </div>
