--- a/artist4all_angular/src/app/components/secure/user-navbar/user-navbar.component.html
+++ b/artist4all_angular/src/app/components/secure/user-navbar/user-navbar.component.html
@@ -13,7 +13,7 @@
     </ul>
     <ul class="flex items-center">
       <!-- todo: guardar en la db la foto del src por defecto y que la puedan cambiar, modificar el ts para ello -->
-      <div class="ml-3 relative" *ngIf="isAuthenticated()">
+      <div class="ml-3 relative">
         <div (click)="isMenuDisplayed()">
           <button class="bg-gray-800 flex text-sm rounded-full focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-gray-800 focus:ring-white" id="user-menu" aria-haspopup="true">
             <span class="sr-only">Open user menu</span>
