--- a/artist4all_angular/src/app/components/secure/user-settings/user-settings.component.html
+++ b/artist4all_angular/src/app/components/secure/user-settings/user-settings.component.html
@@ -104,7 +104,7 @@
 
                     <div>
                       <label for="about" class="block text-sm font-medium text-gray-700">
-                        Biografía
+                        Sobre mi
                       </label>
                       <div class="mt-1">
                         <textarea id="about" name="about" rows="3" class="shadow-sm focus:ring-light-blue-500 focus:border-light-blue-500 mt-1 block w-full sm:text-sm border-gray-300 rounded-md"></textarea>
