--- a/artist4all_angular/src/app/components/secure/profile/profile.component.html
+++ b/artist4all_angular/src/app/components/secure/profile/profile.component.html
@@ -1,12 +1,11 @@
 <app-user-navbar></app-user-navbar>
 
 <div class="h-screen flex overflow-hidden bg-white">
-    <!-- Static sidebar for desktop --><app-user-sidebar></app-user-sidebar>
+    <app-user-sidebar></app-user-sidebar>
     <div class="flex flex-col min-w-0 flex-1 overflow-hidden">
       <div class="flex-1 relative z-0 flex overflow-hidden">
         <main class="flex-1 relative z-0 overflow-y-auto focus:outline-none xl:order-last" tabindex="0">
           <article>
-            <!-- Profile header -->
             <div>
               <div>
                 <img class="h-32 w-full object-cover lg:h-48" src="https://images.unsplash.com/photo-1444628838545-ac4016a5418a?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&amp;ixlib=rb-1.2.1&amp;auto=format&amp;fit=crop&amp;w=1950&amp;q=80" alt="">
@@ -147,14 +146,11 @@
 
                 <div class="sm:col-span-2">
                   <dt class="text-sm font-medium text-gray-500">
-                    About me
+                    Sobre mi
                   </dt>
                   <dd class="mt-1 max-w-prose text-sm text-gray-900">
                     <p>
-                      Tincidunt quam neque in cursus viverra orci, dapibus nec tristique. Nullam ut sit dolor consectetur urna, dui cras nec sed. Cursus risus congue arcu aenean posuere aliquam.
-                    </p>
-                    <p class="mt-5">
-                      Et vivamus lorem pulvinar nascetur non. Pulvinar a sed platea rhoncus ac mauris amet. Urna, sem pretium sit pretium urna, senectus vitae. Scelerisque fermentum, cursus felis dui suspendisse velit pharetra. Augue et duis cursus maecenas eget quam lectus. Accumsan vitae nascetur pharetra rhoncus praesent dictum risus suspendisse.
+                      {{ aboutMe }}
                     </p>
                   </dd>
                 </div>
