--- a/artist4all_angular/src/app/components/secure/user-navbar/user-navbar.component.html
+++ b/artist4all_angular/src/app/components/secure/user-navbar/user-navbar.component.html
@@ -10,6 +10,9 @@
         <li>
             <a routerLink="/store" class="p-3 hover:text-purple-600"><i class="fas fa-store-alt mr-3"></i>Tienda</a>
         </li>
+        <li>
+          <a routerLink="/messages" class="p-3 hover:text-purple-600"><i class="fas fa-paper-plane mr-3"></i>Mensajería</a>
+        </li>
     </ul>
     <div class="flex-1 px-4 flex justify-between">
       <div class="flex-1 flex">
