--- a/artist4all_angular/src/app/components/secure/user-navbar/user-navbar.component.html
+++ b/artist4all_angular/src/app/components/secure/user-navbar/user-navbar.component.html
@@ -14,14 +14,14 @@
           <a routerLink="/messages" class="p-3 hover:text-purple-600"><i class="fas fa-paper-plane mr-3"></i>Mensajería</a>
         </li>
     </ul>
-    <div class="flex-1 px-4 flex justify-between">
+    <div class="flex-1 px-4 flex justify-between ml-3">
       <div class="flex-1 flex">
         <form class="w-full flex md:ml-0" action="#" method="GET">
           <label for="search_field" class="sr-only">Search</label>
           <div class="relative w-full text-gray-400 focus-within:text-gray-600">
             <div class="absolute inset-y-0 left-0 flex items-center pointer-events-none">
               <!-- Heroicon name: solid/search -->
-              <svg class="h-5 w-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+              <svg class="h-5 w-5 mt-2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
                 <path fill-rule="evenodd" d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z" clip-rule="evenodd" />
               </svg>
             </div>
@@ -34,13 +34,15 @@
     <div class="ml-4 flex items-center md:ml-6">
       <button class="bg-white p-1 rounded-full text-gray-400 hover:text-gray-500 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
         <span class="sr-only">View notifications</span>
-        <!-- Heroicon name: outline/bell -->
         <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 17h5l-1.405-1.405A2.032 2.032 0 0118 14.158V11a6.002 6.002 0 00-4-5.659V5a2 2 0 10-4 0v.341C7.67 6.165 6 8.388 6 11v3.159c0 .538-.214 1.055-.595 1.436L4 17h5m6 0v1a3 3 0 11-6 0v-1m6 0H9" />
         </svg>
       </button>
     </div>
     <ul class="flex items-center">
+      <div class="ml-4">
+         {{ name }} {{ surname1 }}
+      </div>
       <div class="ml-3 relative">
         <div (click)="isMenuDisplayed()">
           <button class="bg-gray-800 flex text-sm rounded-full focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-gray-800 focus:ring-white" id="user-menu" aria-haspopup="true">
@@ -49,9 +51,9 @@
           </button>
         </div>
         <div class="origin-top-right absolute right-0 mt-2 w-48 rounded-md shadow-lg py-1 bg-white ring-1 ring-black ring-opacity-5 hidden z-40" id="menu-toggle" role="menu" aria-orientation="vertical" aria-labelledby="user-menu">
-          <a routerLink="/profile" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100" role="menuitem"><i class="fas fa-user mr-3"></i>Mi perfil</a>
-          <a routerLink="/settings" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100" role="menuitem"><i class="fas fa-cog mr-3"></i>Configuración</a>
-          <a routerLink="" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100" role="menuitem" (click)="logout()"><i class="fas fa-sign-out-alt mr-3"></i>Cerrar sesión</a>
+          <a routerLink="/profile" (click)="isMenuDisplayed()" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100" role="menuitem"><i class="fas fa-user mr-3"></i>Mi perfil</a>
+          <a routerLink="/settings" (click)="isMenuDisplayed()" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100" role="menuitem"><i class="fas fa-cog mr-3"></i>Configuración</a>
+          <a routerLink="" (click)="isMenuDisplayed()" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100" role="menuitem" (click)="logout()"><i class="fas fa-sign-out-alt mr-3"></i>Cerrar sesión</a>
         </div>
       </div>
     </ul>
